final-project-part1/terraform/modules/security_gp/main.tf
resource "aws_security_group" "backend" {
  name        = "backend-sg"
  description = "allow app traffic and ssh to backend ASG instances"
  vpc_id      = var.vpc_id

  ingress {
    description = "spring boot app"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    #added just for testing bcoz no fix public ip
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "backend-sg"
  }
}

resource "aws_security_group" "jenkins" {
  name        = "jenkins-sg"
  description = "allow jenkins ui and ssh"
  vpc_id      = var.vpc_id

  ingress {
    description = "jenkins ui"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "jenkins-sg"
  }
}

resource "aws_security_group" "rds" {
  name        = "rds-sg"
  description = "allow mysql only from backend sg"
  vpc_id      = var.vpc_id

  ingress {
    description     = "mysql from backend"
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.backend.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "rds-sg"
  }
}
